fluxcd/clusters/pi/home/sabnzbd/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: home
spec:
  selector:
    app: sabnzbd
  ports:
    - name: sabnzbd-port
      port: 80
      targetPort: sabnzbd-port
