fluxcd/clusters/pi/home/sabnzbd/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd-ingress-route
  namespace: home
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sabnzbd.local.fellowfreak.dev`)
      kind: Rule
      services:
        - name: sabnzbd
          port: 80
  tls:
    secretName: local-fellowfreak-dev-production-tls
